[gd_scene load_steps=7 format=2]

[ext_resource path="res://ice_key.png" type="Texture" id=1]
[ext_resource path="res://PlayerGUI.gd" type="Script" id=2]
[ext_resource path="res://ItemIcon.tscn" type="PackedScene" id=3]
[ext_resource path="res://weapon_sprite_laser.png" type="Texture" id=4]
[ext_resource path="res://theme_test.tres" type="Theme" id=6]

[sub_resource type="StyleBoxFlat" id=1]

[node name="PlayerGUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.82843
margin_bottom = 2.82843
mouse_filter = 2
theme = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="PlayerHealthbar" type="ProgressBar" parent="."]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 18.0
rect_min_size = Vector2( 200, 0 )
value = 20.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 1.0
margin_top = 31.0
margin_right = 152.0
margin_bottom = 54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FpsTag" type="Label" parent="HBoxContainer"]
margin_right = 51.0
margin_bottom = 24.0
text = "FPS:"

[node name="FpsValue" type="Label" parent="HBoxContainer"]
margin_left = 55.0
margin_right = 81.0
margin_bottom = 24.0
text = "60"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_left = 1.0
margin_top = 49.3677
margin_right = 152.0
margin_bottom = 72.3677
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MemoryTag" type="Label" parent="HBoxContainer2"]
margin_right = 103.0
margin_bottom = 24.0
text = "Memory:"

[node name="MemoryValue" type="Label" parent="HBoxContainer2"]
margin_left = 107.0
margin_right = 133.0
margin_bottom = 24.0
text = "60"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WeaponMenu" type="GridContainer" parent="CenterContainer"]
pause_mode = 2
margin_left = 256.0
margin_top = 150.0
margin_right = 256.0
margin_bottom = 150.0
mouse_filter = 0
columns = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentWeaponSprite" type="Button" parent="."]
pause_mode = 2
margin_left = 0.57489
margin_top = 269.804
margin_right = 27.5749
margin_bottom = 294.804
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentWeaponIcon" type="Sprite" parent="CurrentWeaponSprite"]
position = Vector2( 12.9631, 12.1222 )
texture = ExtResource( 4 )

[node name="ItemIcons" type="GridContainer" parent="."]
margin_left = 210.0
margin_top = 3.0
margin_right = 807.0
margin_bottom = 22.0
custom_constants/vseparation = 10
custom_constants/hseparation = 40
columns = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key1" parent="ItemIcons" instance=ExtResource( 3 )]

[node name="Label" type="Label" parent="ItemIcons/Key1"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Key 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnHouseKey" type="Sprite" parent="ItemIcons"]
position = Vector2( 55, 11 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
